# blog

./: db.sqlite3  pyproject.toml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
config/: settings.py  urls.py
templates/: blog_list.html
